<resources>
    <string name="app_name">Yo2see</string>
    <string-array name="text">
        <item>WHAT WE OFFER</item>
    </string-array>
    <string-array name="buy">
        <item>Buy</item>
    </string-array>
    <string-array name="sell">
        <item>Sell</item>
    </string-array>
    <string-array name="rent">
        <item>Rent</item>
    </string-array>
    <string name="buy_sell">Buy/Sell</string>
    <string-array name="post">
        <item>Post</item>
    </string-array>
    <string name="back">Back</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="click_back_to_exit">Please click BACK button again to exit</string>
    <string name="internal_error">Some internal error occurred. Please try again later.</string>
    <string name="no_network_message">No Internet connection. Please try later!</string>
    <string name="request_timed_out_message">Unable to connect to server. Please check internet connection and try
        again.
    </string>
    <string name="server_error">Some server error occurred. Please try again later.</string>
    <string name="error_field_cant_blank">field can\'t blank</string>
    <string name="error_field_country_code">Please enter country code</string>
    <string name="error_field_cant_blank_address">Please enter additional details, it will help us to deliver the order</string>
    <string name="error_field_not_valid_email">email is not valid</string>
    <string name="error_password_min_length">password min length is %1$d</string>
    <string name="error_password_max_length">password should not greater than %1$d</string>
    <string name="error_password_not_match">password should be same as confirm password</string>
    <string name="please_wait">Please wait…</string>
    <string name="default_error_button_retry_text">Retry</string>
    <string name="error_view_default_title">Error</string>
    <string name="error_view_default_desc">There was an error processing the request. Please try again.</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_mobile_not_validation">Mobile number digits should be equal to 10 digit</string>
    <string name="error_password_not_validation"><![CDATA[Password should have !, @, #, $, & one of these special character]]></string>
    <string name="welcome_">Welcome!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="browse_popular_categories">Browse Popular Categories</string>
    <string name="see_all">SEE ALL</string>
    <string name="view_featured_products">VIEW FEATURED PRODUCTS</string>
    <string name="view_more">VIEW MORE</string>
    <string name="load_more">LOAD MORE</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="tute_header1">An <b>Ecommerce platform</b>\nplace where you can</string>
    <string name="next">Next</string>
    <string name="buy_anything">Buy Anithing Saving you money</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_twitter">Sign in with Twitter</string>
    <string name="sign_in_gmail">Sign in with Gmail</string>
    <string name="welcome_text">YO2SEE\nwhere you can find products on</string>
    <string name="events">Events</string>
    <string name="dont_miss">Don\'t miss what\'s happening around you</string>
    <string name="ads">Ads</string>
    <string name="jobs">Jobs</string>
    <string name="real_estate">Real Estate</string>
    <string name="free_stuff">Free stuff</string>
    <string name="clothing">Clothing</string>
    <string name="electronic">Electronic</string>
    <string name="mobile">Mobiles</string>
    <string name="buy_header_text">Buy with the best details\nwhat would you like to Buy</string>
    <string name="rent_header_text">Rent with the best details\nwhat would you like to Rent</string>
    <string name="barter_header_text">Barter with the best details\nwhat would you like to Barter</string>
    <string name="post_header_text">Post with the best details\nwhat would you like to Post</string>
    <string name="tools">Tools</string>
    <string name="mobile_and_accessories"><![CDATA[Mobiles & Accessories]]></string>
    <string name="view_listing"><u>View listing</u></string>
    <string name="first_name">Name*</string>
    <string name="phone_number">Phone number*</string>
    <string name="email_id">Email Id*</string>
    <string name="password_">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="create_account">Create account</string>
    <string name="confirm_term_and_condition">Confirm the terms and conditions</string>
    <string name="open_to_nagotiation">This Item is open to negotiation</string>
    <string name="address"><u>Greater Toronto</u></string>
    <string name="skip"><u>SKIP</u></string>
    <string name="explore">Explore</string>
    <string name="post_an_add">POST AN ADD</string>
    <string name="select_an_posting_category">Select the posting category</string>
    <string name="barter">Barter</string>
    <string name="add_a_title_to_your_post">Add a title to your post</string>
    <string name="description">Description</string>
    <string name="set_a_price">Set a price</string>
    <string name="select_an_item">Select item condition</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="upload_images">Upload Images</string>
    <string name="for_the_best_viewing_please_upload">For best viewing please upload High quality images of your product</string>
    <string name="are_you_open_to_negotiation">Are you open to negotiation?</string>
    <string name="please_set_your_address">Please set your address</string>
    <string name="user_my_current_location">Use my current location</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="state">State/Provence</string>
    <string name="country">country</string>
    <string name="are_you_open_to_deliver">Are you open to deliver</string>
    <string name="up_till_what_km">up till what km would you deliver</string>
    <string name="poster_infomation">Posters Information</string>
    <string name="has_been_part_ayo2see">Has been a part of YO2SEE since a year</string>
    <string name="view_profile">View Profile</string>
    <string name="add_listing">Add Listing</string>
    <string name="product_details">Product details</string>
    <string name="set_rent_term_and_condition">Set rent terms and conditions</string>
    <string name="renting_type">Renting type</string>
    <string name="set_payment">Set Payment</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="what_would_you_like_to_barter">What would you like to barter</string>
    <string name="what_would_you_like_in_exchange">What would you like in exchange</string>
    <string name="exchangeable_product_title">Exchangeable product title</string>
    <string name="exchangeable_product_title_description">Exchangeable product title description</string>
    <string name="additional_details">Additional details</string>
    <string name="address_one">Address one</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="select_images">Select Images</string>
    <string name="this_profile_is_authenticated">This profile is Authenticated</string>
    <string name="renting_term_condition"><![CDATA[Renting terms  & condition]]></string>
    <string name="image_validation">Maximum 20 images can be selected</string>
    <string name="my_yo2see">My YO2SEE</string>
    <string name="my_account">My Account</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout/ Change Account</string>
    <string name="my_posts">My Posts</string>
    <string name="add_new_post">Add New Post</string>
    <string name="current_post">Current Posts</string>
    <string name="previous_posts">Previous Posts</string>
    <string name="our_story">Our Story</string>
    <string name="carrers">Careers</string>
    <string name="services">Services</string>
    <string name="support">Support</string>
    <string name="please_enter_otp">Please enter OTP sent on your \n mobile number</string>
    <string name="submit">Submit</string>
    <string name="get_otp">GET OTP</string>
    <string name="once_your_enter_your_information">Once you enter your information you will\nreceive an OTP on your mentioned phone number</string>
    <string name="select_an_account_type">Select account type</string>
    <string name="private_">Private</string>
    <string name="business">Business</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_profile_information">Edit Profile Information</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="profile_link">Profile link</string>
    <string name="you_currently_connect">You currently connect using</string>
    <string name="save_changes">Save changes</string>
    <string name="facebook_app_id">1124731504657373</string>
    <string name="fb_login_protocol_scheme">fb1124731504657373</string>
    <string name="search_mobile">Search for mobiles, furniture\'s, post</string>
    <string name="search_for_mobiles">Search for mobiles, tablets, housing, renting etc...</string>
    <string name="add_location">Add location</string>
    <string-array name="category_type">
        <item>Rent</item>
        <item>Sell</item>
        <item>Barter</item>
        <item>Post</item>
    </string-array>
    <string name="apply">Apply</string>
    <string name="account_type">Account type</string>
    <string name="liked_post">Liked posts</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_request">Change password request</string>
    <string name="please_change_your_password">Please reset your password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password_">Confirm Password</string>
    <string name="capital_letter">capital letters, numbers and special characters</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="old_password">Old password</string>
    <string name="hi_there">Hi there!</string>
    <string name="we_will_be_sending">we will be sending you your change\npassword details on your email</string>
    <string name="sign_in">Sign in</string>
    <string name="did_you_recieve_email_yet">Did you receive your email yet</string>
    <string name="click_here_toresend_email">CLICK HERE TO RESEND EMAIL</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="please_provide_your_email">Please provide your email address to\nretrieve your temporary password</string>
    <string name="my_favorites">My Favorites</string>
    <string name="search_location">Search Location</string>
    <string name="post_history">Post History</string>
</resources>