<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/light_red"
    tools:context=".ui.more.MoreActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_margin="10dp"
                    app:tint="@color/gmail_color"
                    app:srcCompat="@drawable/ic_baseline_clear_24"
                    android:layout_width="30dp"
                    android:scaleType="fitXY"
                    android:layout_height="30dp"/>

                <LinearLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <RelativeLayout
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_bg" >
                        <com.makeramen.roundedimageview.RoundedImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/ivProfileL"
                            android:src="@drawable/no_image2"
                            android:scaleType="centerCrop"
                            app:riv_corner_radius="30dip"
                            app:riv_border_width="2dip"
                            android:padding="5dp"
                            android:layout_centerInParent="true"
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            app:riv_border_color="#ffffff"
                            app:riv_oval="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/welcome_"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/view_profile"
                            android:lineSpacingExtra="1dp"
                            android:textColor="@color/gmail_color"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:background="@color/gmail_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:paddingStart="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/my_yo2see"
                    android:textColor="@color/gmail_color"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/tvMyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/my_account"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/my_favorites"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/news"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:background="@color/red_a"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:paddingStart="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/my_posts"
                    android:textColor="@color/gmail_color"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/my_account"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/add_new_post"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvPostHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/post_history"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/red_a"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:paddingStart="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/explore"
                    android:textColor="@color/gmail_color"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/buy"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/rent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/barter"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/post"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/red_a"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:paddingStart="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/my_yo2see"
                    android:textColor="@color/gmail_color"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/our_story"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/carrers"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/services"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/support"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>