<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/please_set_your_address"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvUseCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/user_my_current_location"
        android:textColor="@color/red_a"
        android:textSize="12sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@color/red_a" />

    <TextView
        android:id="@+id/tvSearchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/search_location"
        android:textColor="@color/red_a"
        android:textSize="12sp" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/red_a" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/address_one"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddressOne"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/edit_text_round_corner_bg"
        android:focusableInTouchMode="true"
        android:lines="1"
        android:textColor="@color/disabled_text"
        android:textColorHint="@color/disabled_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/edit_text_round_corner_bg"
        android:focusableInTouchMode="true"
        android:textColor="@color/disabled_text"
        android:textColorHint="@color/disabled_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/pincode"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPincode"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_round_corner_bg"
        android:focusableInTouchMode="true"
        android:clickable="false"
        android:focusable="false"
        android:inputType="number"
        android:textColor="@color/disabled_text"
        android:textColorHint="@color/disabled_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etState"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_round_corner_bg"
        android:focusableInTouchMode="true"
        android:clickable="false"
        android:focusable="false"
        android:textColor="@color/disabled_text"
        android:textColorHint="@color/disabled_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/country"

        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/edit_text_round_corner_bg"
        android:focusableInTouchMode="true"
        android:textColor="@color/disabled_text"
        android:textColorHint="@color/disabled_text" />


</LinearLayout>